--- a/ue_mongo/package.json
+++ b/ue_mongo/package.json
@@ -13,12 +13,12 @@
   "dependencies": {
     "core-js": "^3.3.2",
     "element-ui": "^2.12.0",
-    "tms-vue": "^0.0.9",
-    "tms-vue-ui": "^0.0.45",
+    "tms-vue": "^0.0.11",
+    "tms-vue-ui": "^0.0.48",
+    "uuid": "^8.3.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.0.1",
-    "uuid": "^8.3.1"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
