--- a/ue_mongo/.env
+++ b/ue_mongo/.env
@@ -10,6 +10,8 @@ VUE_APP_BASE_URL = '/mongo'
 VUE_APP_BACK_API_BASE = '/api'
 VUE_APP_BACK_API_SERVER = 'http://localhost:3000'
 
+VUE_APP_BACK_API_FS='/fs'
+
 # 登录信息
 # VUE_APP_LOGIN_KEY_USERNAME = ''
 # VUE_APP_LOGIN_KEY_PASSWORD = ''
