--- a/ue_mongo/.env
+++ b/ue_mongo/.env
@@ -3,8 +3,8 @@ VUE_APP_TITLE = 'TMW 用户端'
 VUE_APP_BASE_URL = '/mongo'
 
 # auth base api
-VUE_APP_BACK_AUTH_BASE = '/auth'
-VUE_APP_BACK_AUTH_SERVER = 'http://localhost:3000'
+# VUE_APP_BACK_AUTH_BASE = '/auth'
+# VUE_APP_BACK_AUTH_SERVER = 'http://localhost:3000'
 
 # app base api
 VUE_APP_BACK_API_BASE = '/api'
