0621reids支持配置密码

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,8 @@ services:
     #    - TMW_MONGODB_A_PORT=27019
     #    - TMS_MONGODB_S_HOST=""
     #    - TMS_MONGODB_A_HOST=""
+    # redis增加密码
+    #    - TMS_REDIS_PWD=''
     command:
       [
         'sh',
