--- a/ue_admin/.env
+++ b/ue_admin/.env
@@ -15,3 +15,6 @@ VUE_APP_BACK_API_SERVER = 'http://localhost:3000'
 # VUE_APP_LOGIN_KEY_USERNAME = ''
 # VUE_APP_LOGIN_KEY_PASSWORD = ''
 # VUE_APP_LOGIN_KEY_PIN = ''
+
+# 配置token存储机制
+VUE_APP_STORETOKEN_WAY='cookie'
