--- a/Dockerfile-ueadmin
+++ b/Dockerfile-ueadmin
@@ -16,6 +16,7 @@ ARG vue_app_back_api_server
 ARG vue_app_back_api_fs
 ARG vue_app_front_doceditor_add
 ARG vue_app_front_doceditor_modify
+ARG vue_app_storetoken_way
 
 RUN echo VUE_APP_TITLE=$vue_app_title > .env && \
   echo VUE_APP_BASE_URL=$vue_app_base_url >> .env && \
@@ -25,7 +26,8 @@ RUN echo VUE_APP_TITLE=$vue_app_title > .env && \
   echo VUE_APP_BACK_API_SERVER=$vue_app_back_api_server >> .env && \
 	echo VUE_APP_BACK_API_FS=$vue_app_back_api_fs >> .env && \
 	echo VUE_APP_FRONT_DOCEDITOR_ADD=$vue_app_front_doceditor_add >> .env && \
-	echo VUE_APP_FRONT_DOCEDITOR_MODIFY=$vue_app_front_doceditor_modify >> .env 
+	echo VUE_APP_FRONT_DOCEDITOR_MODIFY=$vue_app_front_doceditor_modify >> .env && \
+	echo VUE_APP_STORETOKEN_WAY=$vue_app_storetoken_way >> .env 
 
 # 安装依赖包，构建代码
 RUN cd ue_admin && cnpm i && yarn build
