--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,6 +74,7 @@ services:
         vue_app_back_api_fs: /fs
         vue_app_front_doceditor_add: ''
         vue_app_front_doceditor_modify: ''
+        vue_app_storetoken_way: session
     image: tms-mongodb/ue-admin:latest
     container_name: tms-mongodb-ue_admin
     environment:
@@ -93,6 +94,7 @@ services:
         vue_app_front_doceditor_add: ''
         vue_app_front_doceditor_modify: ''
         vue_app_front_batcheditor: ''
+        vue_app_storetoken_way: session
     image: tms-mongodb/ue-mongo:latest
     container_name: tms-mongodb-ue_mongo
     environment:
