--- a/Dockerfile-uemongo
+++ b/Dockerfile-uemongo
@@ -17,6 +17,7 @@ ARG vue_app_back_api_server
 ARG vue_app_back_api_fs
 ARG vue_app_front_doceditor_add
 ARG vue_app_front_doceditor_modify
+ARG vue_app_front_batcheditor
 ARG vue_app_storetoken_way
 ARG vue_app_pluginsub_names
 
@@ -30,8 +31,8 @@ RUN echo VUE_APP_TITLE=$vue_app_title > ./ue_mongo/.env && \
   echo VUE_APP_FRONT_DOCEDITOR_ADD=$vue_app_front_doceditor_add >> ./ue_mongo/.env && \
 	echo VUE_APP_FRONT_DOCEDITOR_MODIFY=$vue_app_front_doceditor_modify >> ./ue_mongo/.env && \ 
   echo VUE_APP_FRONT_BATCHEDITOR=$vue_app_front_batcheditor >> ./ue_mongo/.env && \
-  echo VUE_APP_PLUGINSUB_NAMES=$vue_app_pluginsub_names >> ./ue_mongo/.env && \
-  echo VUE_APP_STORETOKEN_WAY=$vue_app_storetoken_way >> .env 
+  echo VUE_APP_STORETOKEN_WAY=$vue_app_storetoken_way >> ./ue_mongo/.env && \
+  echo VUE_APP_PLUGINSUB_NAMES=$vue_app_pluginsub_names >> ./ue_mongo/.env
 
 
 # 安装依赖包，构建代码
