--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,17 +39,21 @@ services:
     #   - TMW_API_PORT=3000
     #   bucket
     #   - TMW_REQUIRE_BUCKET=
-    #   插件发送配置地址
-    #   - TMS_PLUGINS_SEND_IP=
-    # 复制集：开启实时复制
+    #   复制集：开启实时复制
     #    - TMW_REALTIME_REPLICA=true
     #    - TMW_REPLICA_SET_NAME=tmw-rA_s
     #    - TMW_MONGODB_S_PORT=27018
     #    - TMW_MONGODB_A_PORT=27019
     #    - TMS_MONGODB_S_HOST=""
     #    - TMS_MONGODB_A_HOST=""
-    # redis增加密码
+    #   redis增加密码
     #    - TMS_REDIS_PWD=''
+    #   应用路由前缀
+    #    - TMS_APP_ROUTER_AUTH=''
+    #    - TMS_APP_ROUTER_CONTROLLER=''
+    #    - TMS_APP_ROUTER_PLUGIN=''
+    #    - TMS_APP_ROUTER_FSDOMAIN=''
+    #    - TMS_APP_DATA_ACTION_LOG=''
     command:
       [
         'sh',
