--- a/ue_mongo/.env
+++ b/ue_mongo/.env
@@ -17,4 +17,16 @@ VUE_APP_BACK_API_SERVER = 'http://localhost:3000'
 # VUE_APP_LOGIN_KEY_PIN = ''
 
 # 配置token存储机制
-VUE_APP_STORETOKEN_WAY='cookie'
+VUE_APP_STORETOKEN_WAY = 'cookie'
+
+# 添加或修改、批量修改文档时，对数据进行的额外校验，等同于插件
+VUE_APP_FRONT_DOCEDITOR_ADD = ''
+VUE_APP_FRONT_DOCEDITOR_MODIFY = ''
+VUE_APP_FRONT_BATCHEDITOR = ''
+
+# 集合列定义标签
+VUE_APP_SCHEMA_TAGS = ''
+VUE_APP_SCHEMA_DEFAULT_TAGS = ''
+
+# 是否开启bucket
+VUE_APP_TMW_REQUIRE_BUCKET = no
