--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,7 +67,8 @@ services:
       ]
   ue_admin:
     build:
-      context: ./ue_admin
+      context: .
+      dockerfile: Dockerfile-ueadmin
       args:
         vue_app_login_key_username: username
         vue_app_login_key_password: password
@@ -86,7 +87,8 @@ services:
 
   ue_mongo:
     build:
-      context: ./ue_mongo
+      context: .
+      dockerfile: Dockerfile-uemongo
       args:
         vue_app_login_key_username: username
         vue_app_login_key_password: password
