--- a/Dockerfile-ueadmin
+++ b/Dockerfile-ueadmin
@@ -7,7 +7,7 @@ RUN npm install -g cnpm --registry=https://registry.npm.taobao.org
 #Install node_modules
 COPY . .
 # 生成.env文件
-ARG vue_app_title=号池管理端
+ARG vue_app_title=管理端
 ARG vue_app_base_url
 ARG vue_app_back_auth_base
 ARG vue_app_back_auth_server
