--- a/Dockerfile-uemongo
+++ b/Dockerfile-uemongo
@@ -8,7 +8,7 @@ RUN npm install -g cnpm --registry=https://registry.npm.taobao.org
 COPY . .
 
 # 生成.env文件
-ARG vue_app_title=号池用户端
+ARG vue_app_title=用户端
 ARG vue_app_base_url
 ARG vue_app_back_auth_base
 ARG vue_app_back_auth_server
@@ -19,6 +19,7 @@ ARG vue_app_front_doceditor_add
 ARG vue_app_front_doceditor_modify
 ARG vue_app_front_batcheditor
 ARG vue_app_storetoken_way
+ARG vue_app_pluginsub_names
 
 RUN echo VUE_APP_TITLE=$vue_app_title > ./ue_mongo/.env && \
   echo VUE_APP_BASE_URL=$vue_app_base_url >> ./ue_mongo/.env && \
@@ -28,7 +29,7 @@ RUN echo VUE_APP_TITLE=$vue_app_title > ./ue_mongo/.env && \
   echo VUE_APP_BACK_API_SERVER=$vue_app_back_api_server >> ./ue_mongo/.env && \
   echo VUE_APP_BACK_API_FS=$vue_app_back_api_fs >> ./ue_mongo/.env && \
   echo VUE_APP_FRONT_DOCEDITOR_ADD=$vue_app_front_doceditor_add >> ./ue_mongo/.env && \
-  echo VUE_APP_FRONT_DOCEDITOR_MODIFY=$vue_app_front_doceditor_modify >> ./ue_mongo/.env && \ 
+	echo VUE_APP_FRONT_DOCEDITOR_MODIFY=$vue_app_front_doceditor_modify >> ./ue_mongo/.env && \ 
   echo VUE_APP_FRONT_BATCHEDITOR=$vue_app_front_batcheditor >> ./ue_mongo/.env && \
   echo VUE_APP_STORETOKEN_WAY=$vue_app_storetoken_way >> ./ue_mongo/.env && \
   echo VUE_APP_PLUGINSUB_NAMES=$vue_app_pluginsub_names >> ./ue_mongo/.env
