--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,4 @@
 README.md
 .git
 .gitignore
-/ue_admin/node_modules/*
-/ue_admin/.env.*
-/ue_admin/.env
-/ue_mongo/node_modules/*
-/ue_mongo/.env.*
-/ue_mongo/.env
+.vscode
