--- a/ue_admin/nginx.conf.template
+++ b/ue_admin/nginx.conf.template
@@ -63,6 +63,12 @@ http {
             proxy_pass $NGINX_BACK_BASE_URL;
         }
 
+        location = /50x.html {
+            root   html;
+            limit_conn connip 10;
+            limit_rate 10240k;
+        }
+
     }
 
 }
