--- a/ue_mongo/nginx.conf.template
+++ b/ue_mongo/nginx.conf.template
@@ -59,7 +59,13 @@ http {
         }
 
         location / {
-            proxy_pass $NGINX_BACK_BASE_URL;
+            proxy_pass $NGINX_BACK_BASE_URL;  
+        }
+
+        location = /50x.html {
+            root   html;
+            limit_conn connip 10;
+            limit_rate 10240k;
         }
 
     }
