--- a/back/package.json
+++ b/back/package.json
@@ -21,6 +21,6 @@
     "nanoid": "^3.1.4",
     "redis": "^2.8.0",
     "request": "^2.88.2",
-    "tms-koa": "^0.0.67"
+    "tms-koa": "0.0.70"
   }
 }
