--- a/ue_admin/package.json
+++ b/ue_admin/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "core-js": "^3.3.2",
     "element-ui": "^2.12.0",
+    "jsoneditor": "^9.7.4",
     "tms-vue": "^0.0.13",
     "tms-vue-ui": "^0.0.51",
     "uuid": "^8.3.1",
