--- a/ue_admin2/package.json
+++ b/ue_admin2/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^1.1.4",
     "@types/node": "^17.0.25",
     "add": "^2.0.6",
     "element-plus": "^2.1.10",
