--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,16 +5,7 @@
   "prettier.useTabs": false,
   "prettier.semi": false,
   "prettier.singleQuote": true,
-  "vetur.format.defaultFormatterOptions": {
-    "prettier": {
-      "semi": false,
-      "singleQuote": true
-    },
-    "js-beautify-html": {
-      "wrap_attributes": "aligned-multiple"
-    }
-  },
-  "vetur.format.options.tabSize": 2,
-  "vetur.format.options.useTabs": false,
-  "vetur.format.defaultFormatter.html": "js-beautify-html"
+  "css.validate": false,
+  "less.validate": false,
+  "scss.validate": false
 }
