--- a/ue_admin2/.env
+++ b/ue_admin2/.env
@@ -1,7 +1,7 @@
 # app config
 
 # auth base api
-VUE_APP_BACK_AUTH_BASE = '/auth'
+VITE_BACK_AUTH_BASE = '/auth'
 VITE_BACK_API_SERVER = 'http://localhost:3000'
 
 # app base api
@@ -10,9 +10,9 @@ VITE_BACK_API_FS = '/fs'
 VITE_BACK_API_SERVER = 'http://localhost:3000'
 
 # 登录信息
-#VUE_APP_LOGIN_KEY_USERNAME = ''
-#VUE_APP_LOGIN_KEY_PASSWORD = ''
-#VUE_APP_LOGIN_KEY_PIN = ''
+#VITE_LOGIN_KEY_USERNAME = ''
+#VITE_LOGIN_KEY_PASSWORD = ''
+#VITE_LOGIN_KEY_PIN = ''
 
 # 配置token存储机制
 VITE_STORETOKEN_WAY='session'
