--- a/ue_admin2/.env
+++ b/ue_admin2/.env
@@ -1,8 +1,8 @@
 # app config
 
 # auth base api
-VITE_BACK_AUTH_BASE = '/auth'
-VITE_BACK_API_SERVER = 'http://localhost:3000'
+#VITE_BACK_AUTH_BASE = '/auth'
+#VITE_BACK_API_SERVER = 'http://localhost:3000'
 
 # app base api
 VITE_BACK_API_BASE = '/api'
@@ -23,3 +23,4 @@ VITE_FRONT_DOCEDITOR_MODIFY=''
 
 # 是否开启bucket
 VITE_TMW_REQUIRE_BUCKET=no
+VITE_APP_AUTH_SECRET=yes
