--- a/back/package.json
+++ b/back/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^4.5.0",
     "nanoid": "^3.1.4",
     "redis": "^4.0.6",
-    "tms-koa": "0.0.73"
+    "tms-koa": "^0.0.80",
+    "tms-koa-account": "^0.0.5"
   }
 }
