--- a/back/package.json
+++ b/back/package.json
@@ -13,12 +13,13 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.26.1",
+    "crypto-js": "^4.1.1",
     "glob": "^8.0.1",
     "lodash": "^4.17.20",
     "log4js": "^6.1.0",
     "moment": "^2.29.2",
     "mongo-escape": "^2.0.6",
-    "mongodb": "^4.5.0",
+    "mongodb": "^3.7.3",
     "nanoid": "^3.1.4",
     "redis": "^4.0.6",
     "tms-koa": "^0.0.80",
