--- a/ue_admin2/package.json
+++ b/ue_admin2/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^1.1.4",
     "add": "^2.0.6",
+    "crypto-js": "^4.1.1",
     "element-plus": "^2.1.10",
     "jsoneditor": "^9.7.4",
     "pinia": "^2.0.13",
