--- a/ue_admin2/package.json
+++ b/ue_admin2/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "@element-plus/icons-vue": "^1.1.4",
     "add": "^2.0.6",
-    "crypto-js": "^4.1.1",
     "element-plus": "^2.1.10",
     "jsoneditor": "^9.7.4",
     "pinia": "^2.0.13",
@@ -30,6 +29,7 @@
     "tailwindcss": "^3.0.24",
     "typescript": "^4.5.4",
     "vite": "^2.9.5",
-    "vue-tsc": "^0.34.7"
+    "vue-tsc": "^0.34.7",
+    "tms-koa-account": "^0.0.7"
   }
 }
