--- a/ue_admin2/.env
+++ b/ue_admin2/.env
@@ -23,4 +23,6 @@ VITE_FRONT_DOCEDITOR_MODIFY=''
 
 # 是否开启bucket
 VITE_TMW_REQUIRE_BUCKET=no
-VITE_APP_AUTH_SECRET=yes
+
+# 是否对传递的用户密码进行加密传输
+; VITEP_ENCRYPT_SECRET=yes
