支持从文件系统中选取文件

--- a/ue_admin2/.env
+++ b/ue_admin2/.env
@@ -1,7 +1,7 @@
 # app config
 
-# auth base api
-#VITE_BACK_AUTH_BASE = '/auth'
+# auth base api 现在是剩下一个auth了
+#VITE_BACK_AUTH_BASE = ''
 #VITE_BACK_API_SERVER = 'http://localhost:3000'
 
 # app base api
@@ -26,3 +26,6 @@ VITE_TMW_REQUIRE_BUCKET=no
 
 # 是否对传递的用户密码进行加密传输
 ; VITEP_ENCRYPT_SECRET=yes
+
+# 选定文件系统的地址
+VITE_EXTRAFILESYSTEM_URL='http://localhost:8080/finder_ue/web/storage'
