--- a/ue_admin2/.env
+++ b/ue_admin2/.env
@@ -1,8 +1,8 @@
 # app config
 
-# auth base api 现在是剩下一个auth了
-#VITE_BACK_AUTH_BASE = ''
-#VITE_BACK_API_SERVER = 'http://localhost:3000'
+# auth base api 现在url中只需一个auth
+VITE_BACK_AUTH_BASE = ''
+VITE_BACK_API_SERVER = 'http://localhost:3000'
 
 # app base api
 VITE_BACK_API_BASE = '/api'
@@ -25,7 +25,7 @@ VITE_FRONT_DOCEDITOR_MODIFY=''
 VITE_TMW_REQUIRE_BUCKET=no
 
 # 是否对传递的用户密码进行加密传输
-; VITEP_ENCRYPT_SECRET=yes
+VITEP_ENCRYPT_SECRET=no
 
-# 选定文件系统的地址
+# 选取文件时，指定外部系统的地址
 VITE_EXTRAFILESYSTEM_URL='http://localhost:8080/finder_ue/web/storage'
