--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -62,6 +62,9 @@ services:
     #    - TMS_APP_ROUTER_PLUGIN=
     #    - TMS_APP_ROUTER_FSDOMAIN=
     #    - TMS_APP_DATA_ACTION_LOG=
+    #   account 配置
+    #    - TMS_ACCOUNT_DBNAME=tms_account
+    #    - TMS_ACCOUNT_CLNAME=account
     networks:
       - tms-mongodb
     command:
@@ -103,20 +106,20 @@ services:
       # - NGINX_LIMIT_CONN_LOG_LEVEL=error
       # # 回复被禁用的连接请求时的状态码
       - NGINX_LIMIT_CONN_STATUS=488
-    # # 达到阀值后开始限速(字节)
-    # - NGINX_LIMIT_RATE_AFTER=300m
-    # # 限制向客户端传输数据的速度(Byte/s)
-    # - NGINX_LIMIT_RATE=300k
-    # # 指定等待client发送一个包体的超时时间
-    # - NGINX_CLIENT_BODY_TIMEOUT=60s
-    # # 指定等待client发送一个包头的超时时间
-    # - NGINX_CLIENT_HEADER_TIMEOUT=60s
-    # # keep-alive连接超时时间
-    # - NGINX_KEEPALIVE_TIMEOUT=75s
-    # # 服务端向客户端传输数据的超时时间
-    # - NGINX_SEND_TIMEOUT=60s
-    # # 隐藏版本号
-    # - NGINX_SERVER_TOKENS=off
+      # # 达到阀值后开始限速(字节)
+      # - NGINX_LIMIT_RATE_AFTER=300m
+      # # 限制向客户端传输数据的速度(Byte/s)
+      # - NGINX_LIMIT_RATE=300k
+      # # 指定等待client发送一个包体的超时时间
+      # - NGINX_CLIENT_BODY_TIMEOUT=60s
+      # # 指定等待client发送一个包头的超时时间
+      # - NGINX_CLIENT_HEADER_TIMEOUT=60s
+      # # keep-alive连接超时时间
+      # - NGINX_KEEPALIVE_TIMEOUT=75s
+      # # 服务端向客户端传输数据的超时时间
+      # - NGINX_SEND_TIMEOUT=60s
+      # # 隐藏版本号
+      # - NGINX_SERVER_TOKENS=off
     networks:
       - tms-mongodb
 
@@ -150,20 +153,62 @@ services:
       # - NGINX_LIMIT_CONN_LOG_LEVEL=error
       # # 回复被禁用的连接请求时的状态码
       - NGINX_LIMIT_CONN_STATUS=488
-    # # 达到阀值后开始限速(字节)
-    # - NGINX_LIMIT_RATE_AFTER=300m
-    # # 限制向客户端传输数据的速度(Byte/s)
-    # - NGINX_LIMIT_RATE=300k
-    # # 指定等待client发送一个包体的超时时间
-    # - NGINX_CLIENT_BODY_TIMEOUT=60s
-    # # 指定等待client发送一个包头的超时时间
-    # - NGINX_CLIENT_HEADER_TIMEOUT=60s
-    # # keep-alive连接超时时间
-    # - NGINX_KEEPALIVE_TIMEOUT=75s
-    # # 服务端向客户端传输数据的超时时间
-    # - NGINX_SEND_TIMEOUT=60s
-    # # 隐藏版本号
-    # - NGINX_SERVER_TOKENS=off
+      # # 达到阀值后开始限速(字节)
+      # - NGINX_LIMIT_RATE_AFTER=300m
+      # # 限制向客户端传输数据的速度(Byte/s)
+      # - NGINX_LIMIT_RATE=300k
+      # # 指定等待client发送一个包体的超时时间
+      # - NGINX_CLIENT_BODY_TIMEOUT=60s
+      # # 指定等待client发送一个包头的超时时间
+      # - NGINX_CLIENT_HEADER_TIMEOUT=60s
+      # # keep-alive连接超时时间
+      # - NGINX_KEEPALIVE_TIMEOUT=75s
+      # # 服务端向客户端传输数据的超时时间
+      # - NGINX_SEND_TIMEOUT=60s
+      # # 隐藏版本号
+      # - NGINX_SERVER_TOKENS=off
+    networks:
+      - tms-mongodb
+
+  ue_admin2:
+    build:
+      context: ../ue_admin2
+      args:
+        vite_back_auth_base: 
+        vite_back_api_server: http://localhost:3000
+        vite_back_api_base: /api
+        vite_back_api_fs: /fs
+        vite_back_api_server: http://localhost:3000
+        vite_storetoken_way: session
+        vite_tmw_require_bucket: 'no'
+        vite_encrypt_secret: 'no'
+    image: tms-mongodb/ue-admin2:latest
+    container_name: tms-mongodb-ue_admin2
+    environment:
+      # - NGINX_BACK_BASE_URL=http://back:3000
+      - NGINX_WEB_BASE_URL=/admin2
+      # # 定义连接基数区域，10m 可以储存 320000 个并发会话
+      # - NGINX_LIMIT_CONN_ZONE=10m
+      # # 是限制每个IP只能发起8000个并发连接
+      # - NGINX_LIMIT_CONN_CONNIP=8000
+      # # 指定当触发limit的时候日志打印级别
+      # - NGINX_LIMIT_CONN_LOG_LEVEL=error
+      # # 回复被禁用的连接请求时的状态码
+      - NGINX_LIMIT_CONN_STATUS=488
+      # # 达到阀值后开始限速(字节)
+      # - NGINX_LIMIT_RATE_AFTER=300m
+      # # 限制向客户端传输数据的速度(Byte/s)
+      # - NGINX_LIMIT_RATE=300k
+      # # 指定等待client发送一个包体的超时时间
+      # - NGINX_CLIENT_BODY_TIMEOUT=60s
+      # # 指定等待client发送一个包头的超时时间
+      # - NGINX_CLIENT_HEADER_TIMEOUT=60s
+      # # keep-alive连接超时时间
+      # - NGINX_KEEPALIVE_TIMEOUT=75s
+      # # 服务端向客户端传输数据的超时时间
+      # - NGINX_SEND_TIMEOUT=60s
+      # # 隐藏版本号
+      # - NGINX_SERVER_TOKENS=off
     networks:
       - tms-mongodb
 
