给ue_admin2增加nginx以及dockerfile文件

--- a/ue_admin2/.env
+++ b/ue_admin2/.env
@@ -25,7 +25,7 @@ VITE_FRONT_DOCEDITOR_MODIFY=''
 VITE_TMW_REQUIRE_BUCKET=no
 
 # 是否对传递的用户密码进行加密传输
-VITEP_ENCRYPT_SECRET=no
+VITE_ENCRYPT_SECRET=no
 
 # 选取文件时，指定外部系统的地址
 VITE_EXTRAFILESYSTEM_URL='http://localhost:8080/finder_ue/web/storage'
