--- a/ue_admin2/package.json
+++ b/ue_admin2/package.json
@@ -19,6 +19,7 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@types/jsoneditor": "^9.5.1",
     "@types/node": "^17.0.25",
     "@vitejs/plugin-vue": "^2.3.1",
     "autoprefixer": "^10.4.5",
@@ -27,9 +28,9 @@
     "stylelint": "^14.8.0",
     "stylelint-config-standard": "^25.0.0",
     "tailwindcss": "^3.0.24",
+    "tms-koa-account": "^0.0.7",
     "typescript": "^4.5.4",
     "vite": "^2.9.5",
-    "vue-tsc": "^0.34.7",
-    "tms-koa-account": "^0.0.7"
+    "vue-tsc": "^0.34.7"
   }
 }
