--- a/back/package.json
+++ b/back/package.json
@@ -12,6 +12,7 @@
   "author": "jasony62",
   "license": "MIT",
   "dependencies": {
+    "@log4js-node/log4js-api": "^1.0.2",
     "axios": "^0.26.1",
     "crypto-js": "^4.1.1",
     "glob": "^8.0.1",
