--- a/packages/tmw-model/package.json
+++ b/packages/tmw-model/package.json
@@ -13,6 +13,8 @@
     "@types/node": "^18.0.1"
   },
   "dependencies": {
-    "dayjs": "^1.11.3"
+    "dayjs": "^1.11.3",
+    "mongo-escape": "^2.0.6",
+    "mongodb": "^4.7.0"
   }
 }
