--- a/packages/tmw-back/tsconfig.json
+++ b/packages/tmw-back/tsconfig.json
@@ -13,7 +13,7 @@
       "@/*": ["src/*"]
     },
     "sourceMap": false,
-    "types": ["node", "jest"]
+    "types": ["node"]
   },
   "include": ["src/**/*.ts", "test/**/*.ts"],
   "exclude": ["node_modules", "**/*.spec.ts"]
