--- a/packages/tmw-model/package.json
+++ b/packages/tmw-model/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tmw-sdk",
+  "name": "tmw-model",
   "version": "0.0.1",
-  "description": "tms-monogodb-web数据库操作sdk",
-  "main": "index.js",
+  "description": "tms-monogodb-web数据库操作",
+  "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
