优化代码结构

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,18 @@
-/back/config/*.local.js
-/ue_admin2/node_modules/*
-/ue_admin2/.env.*
-/ue_admin2/.env
+/back/config/_.local.js
+/packages/tmw-model/node_modules
+/packages/tmw-model/test
+/packages/tmw-back/node_modules
+/packages/tmw-back/test
+/packages/tmw-back/storage
+/packages/tmw-back/\_lowdb.json
+/ue_admin2/node_modules/_
+/ue*admin2/.env.*
+/ue*admin2/.env
 /ue_admin/node_modules/*
-/ue_admin/.env.*
-/ue_admin/.env
+/ue*admin/.env.*
+/ue*admin/.env
 /ue_mongo/node_modules/*
-/ue_mongo/.env.*
+/ue_mongo/.env.\*
 /ue_mongo/.env
 README.md
 .git
