--- a/packages/tmw-back/package.json
+++ b/packages/tmw-back/package.json
@@ -1,9 +1,10 @@
 {
   "name": "tmw-back",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "rimraf ./dist && tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,11 +15,13 @@
     "lodash": "^4.17.21",
     "log4js": "^6.5.2",
     "mongodb": "^4.7.0",
-    "nanoid": "^4.0.0",
-    "tms-koa": "0.0.84",
-    "tmw-model": "workspace:^0.0.1"
+    "nanoid": "^3.1.4",
+    "tms-koa": "^0.0.86",
+    "tms-koa-account": "^0.0.10",
+    "tmw-model": "workspace:*"
   },
   "devDependencies": {
-    "@types/node": "^18.0.1"
+    "@types/node": "^18.0.1",
+    "rimraf": "^3.0.2"
   }
 }
