--- a/packages/tmw-model/package.json
+++ b/packages/tmw-model/package.json
@@ -4,17 +4,19 @@
   "description": "tms-monogodb-web数据库操作",
   "main": "./dist/index.js",
   "scripts": {
+    "build": "rimraf ./dist && tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "jasony62",
   "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^18.0.1"
-  },
   "dependencies": {
     "dayjs": "^1.11.3",
     "mongo-escape": "^2.0.6",
     "mongodb": "^4.7.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.0.1",
+    "rimraf": "^3.0.2"
   }
 }
