--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -174,6 +174,7 @@ services:
     build:
       context: ../ue_admin2
       args:
+        vite_base_url: /admin2
         vite_back_auth_base: 
         vite_back_api_server: http://localhost:3000
         vite_back_api_base: /api
