--- a/packages/tmw-back/package.json
+++ b/packages/tmw-back/package.json
@@ -16,11 +16,13 @@
     "log4js": "^6.5.2",
     "mongodb": "^4.7.0",
     "nanoid": "^3.1.4",
+    "redis": "^4.2.0",
     "tms-koa": "^0.0.86",
     "tms-koa-account": "^0.0.10",
     "tmw-model": "workspace:*"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/node": "^18.0.1",
     "rimraf": "^3.0.2"
   }
