--- a/back/package.json
+++ b/back/package.json
@@ -10,6 +10,7 @@
   "author": "jasony62",
   "license": "MIT",
   "dependencies": {
+    "archiver": "^5.3.1",
     "@log4js-node/log4js-api": "^1.0.2",
     "axios": "^0.26.1",
     "crypto-js": "^4.1.1",
