--- a/back/package.json
+++ b/back/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@log4js-node/log4js-api": "^1.0.2",
+    "archiver": "^5.3.1",
     "axios": "^0.26.1",
     "crypto-js": "^4.1.1",
     "glob": "^8.0.1",
