--- a/packages/tmw-back/package.json
+++ b/packages/tmw-back/package.json
@@ -11,6 +11,7 @@
   "author": "jasony62",
   "license": "MIT",
   "dependencies": {
+    "archiver": "^5.3.1",
     "dayjs": "^1.11.3",
     "lodash": "^4.17.21",
     "log4js": "^6.5.2",
