--- a/packages/tmw-model/tsconfig.json
+++ b/packages/tmw-model/tsconfig.json
@@ -9,7 +9,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "declaration": true,
-    "sourceMap": true
+    "sourceMap": false
   },
   "exclude": ["node_modules", "dist", "test"]
 }
