--- a/ue_admin2/package.json
+++ b/ue_admin2/package.json
@@ -15,7 +15,7 @@
     "jsoneditor": "^9.7.4",
     "pinia": "^2.0.13",
     "tms-vue3": "0.0.4",
-    "tms-vue3-ui": "0.0.39",
+    "tms-vue3-ui": "^0.0.42",
     "vue": "^3.2.25",
     "vue-router": "4"
   },
