--- a/ue_admin2/.env
+++ b/ue_admin2/.env
@@ -2,13 +2,14 @@
 VITE_BASE_URL=/admin
 
 # auth base api 现在url中只需一个auth
-VITE_BACK_AUTH_BASE = ''
-VITE_BACK_API_SERVER = 'http://localhost:3000'
+VITE_BACK_AUTH_BASE = 
+VITE_BACK_AUTH_PORT = 
 
 # app base api
 VITE_BACK_API_BASE = '/api'
+VITE_BACK_API_PORT = 3000
+
 VITE_BACK_API_FS = '/fs'
-VITE_BACK_API_SERVER = 'http://localhost:3000'
 
 # 登录信息
 #VITE_LOGIN_KEY_USERNAME = ''
