--- a/packages/tmw-back/package.json
+++ b/packages/tmw-back/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf ./dist && tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./dist/server"
   },
   "keywords": [],
   "author": "jasony62",
