--- a/packages/tmw-model/package.json
+++ b/packages/tmw-model/package.json
@@ -11,7 +11,10 @@
   "author": "jasony62",
   "license": "MIT",
   "dependencies": {
+    "@log4js-node/log4js-api": "^1.0.2",
+    "axios": "^0.27.2",
     "dayjs": "^1.11.3",
+    "glob": "^8.0.3",
     "mongo-escape": "^2.0.6",
     "mongodb": "^4.7.0"
   },
